--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <nav class="navbar fixed-top navbar-expand-lg navbar-light" style="background-color: #fafafa;">
       <div class="container">
-        <a class="navbar-brand" href="#"><b>ALFAN</b></a>
+        <a class="navbar-brand" href="#"><b>ALFANN</b></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
