--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <nav class="navbar fixed-top navbar-expand-lg navbar-light" style="background-color: #fafafa;">
       <div class="container">
-        <a class="navbar-brand" href="#"><b>ALFANN</b></a>
+        <a class="navbar-brand" href="#"><b>ALFAN</b></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -28,7 +28,7 @@
           <div class="navbar-nav ml-auto">
             <ul class="nav navbar-nav">
               <li class="nav-item mr-5">
-                  <a class="link" href="#">About</a>
+                  <a class="link" href="#">About_</a>
               </li>
               <li class="nav-item mr-5">
                   <a class="link" href="#">Portfolio</a>
