--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <div class="navbar-nav ml-auto">
             <ul class="nav navbar-nav">
               <li class="nav-item mr-5">
-                  <a class="link" href="#">About_</a>
+                  <a class="link" href="#">About</a>
               </li>
               <li class="nav-item mr-5">
                   <a class="link" href="#">Portfolio</a>
