--- a/index.html
+++ b/index.html
@@ -313,6 +313,30 @@
             </button>
           </div>
         </div>
+
+        <div class="row mb-4">
+          <div class="col-lg-4 col-sm-6">
+            <button class="ctnbutton" type="button" data-toggle="modal" data-target="#kalender">
+              <div class="card">
+                <img src="img/kalender masid 2023.jpg" class="card-img-top">
+              </div>
+            </button>  
+          </div>
+          <div class="col-lg-4 col-sm-6">
+            <button class="ctnbutton" type="button" data-toggle="modal" data-target="#konseramal">
+              <div class="card">
+                <img src="img/banner cc.jpg" class="card-img-top">
+              </div>
+            </button>
+          </div>
+          <div class="col-lg-4 col-sm-6">
+            <button class="ctnbutton" type="button" data-toggle="modal" data-target="#bakmie">
+              <div class="card">
+                <img src="img/bakmie.jpg" class="card-img-top">
+              </div>
+            </button>
+          </div>
+        </div>
       </div>  
       
       <!-- popup modal -->
@@ -471,6 +495,62 @@
                 <div class="modal-body" style="text-align: center;">
                   <img src="img/content/player1.jpg" alt="Logo" style="width: 800px;">
                   <h5>My <p style="font-size: 20pt; color: red; display: inline;"> &#10084;</p> Logo</h5>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="modal fade" id="kalender" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-xl modal-dialog-centered modal-dialog-scrollable">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5>Kalender Masjid baitussa'adah</h5>
+                </div>
+                <div class="modal-body" style="text-align: center;">
+                  <img src="img/content/kalender masid-1.jpg" alt="kalender" style="width: 800px; margin-bottom: 10px;">
+                  <img src="img/content/kalender masid-2.jpg" alt="kalender" style="width: 800px; margin-bottom: 10px;">
+                  <img src="img/content/kalender masid-3.jpg" alt="kalender" style="width: 800px; margin-bottom: 10px;">
+                  <img src="img/content/kalender masid-4.jpg" alt="kalender" style="width: 800px; margin-bottom: 10px;">
+                  <img src="img/content/kalender masid-5.jpg" alt="kalender" style="width: 800px;">
+                  <p style="margin-bottom: 0px; margin-top: 10px;">Kalender Masjid baitussa'adah Designed 
+                    by Alfan using coreldraw</p>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="modal fade" id="konseramal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-xl modal-dialog-centered modal-dialog-scrollable">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5>Machine Charity Concert 2019</h5>
+                </div>
+                <div class="modal-body" style="text-align: center;">
+                  <img src="img/content/banner concert charity.jpg" alt="Banner" style="width: 800px;">
+                  <p style="margin-bottom: 0px; margin-top: 10px;">Machine Charity Concert 2019, Designed by Alfan using coreldraw</p>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="modal fade" id="bakmie" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-xl modal-dialog-centered modal-dialog-scrollable">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5>Banner Bakmie Suroboyo</h5>
+                </div>
+                <div class="modal-body" style="text-align: center;">
+                  <img src="img/content/banner makanan bakmie surabaya.jpg" alt="Banner" style="width: 800px;">
+                  <p style="margin-bottom: 0px; margin-top: 10px;">Banner Bakmie Suroboyo, Designed by Alfan using coreldraw</p>
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
